crates/k-rust/tests/snapshots/inner_rules__as_pattern_alias_with_a_semantic_cast.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Int ::= r\"[0-9]+\" [token]\n  syntax KItem ::= foo(Int) [symbol(foo)]\n  syntax KCell ::= \"<k>\" K \"</k>\" [cell]\n  rule foo(0) #as V:KItem\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "foo(#token(\"0\",\"Int\")) #as #SemanticCastToKItem(V)",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
