crates/k-rust/tests/snapshots/inner_rules__as_pattern_as_both_sides_of_a_rewrite_at_an_argument_position.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Int ::= r\"[0-9]+\" [token]\n  syntax Exp ::= Int | bar(Exp) [symbol(bar)]\n  syntax KItem ::= foo(Int) [symbol(foo)]\n  syntax List ::= ListItem(KItem) [symbol(ListItem)]\n                | List List [symbol(_List_)]\n                | \".List\" [symbol(.List)]\n  syntax KCell ::= \"<k>\" K \"</k>\" [cell]\n  rule bar(0 #as V => 1 #as W)\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "bar(#token(\"0\",\"Int\") #as #SemanticCastToExp(V)=>#token(\"1\",\"Int\") #as #SemanticCastToExp(W))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
